--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "vitepress": "^1.3.4"
+    "vitepress": "^1.3.4",
+    "packageManager": "pnpm"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
