--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "vitepress": "^1.3.4",
-    "packageManager": "pnpm"
+    "packageManager": "pnpm@9.0.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
